Added Spring security and other JPA changes